--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -33,3 +33,8 @@ sphinx:
 # python:
 #   install:
 #     - requirements: docs/requirements.txt
+
+python:
+  install:
+    - method: pip
+      path: .
